--- a/src/app/pages/progress/progress.component.html
+++ b/src/app/pages/progress/progress.component.html
@@ -1,3 +1,34 @@
-<p>
-  progress works!
-</p>
+
+<div class="row">
+  <div class="col-12">
+      <div class="card">
+          <div class="card-body">
+            <h4 class="card-title">Barra de progreso</h4>
+            <div class="progress">
+              <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" [attr.ariaValuenow]="percentage" [style.width]="percentage + '%'"  aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <br>
+            <div class="progress">
+              <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" [attr.ariaValuenow]="percentage2" [style.width]="percentage2 + '%'"  aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+      </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-6">
+      <div class="card">
+          <div class="card-body">
+            <app-incrementador [labelValue]="'Progress 1'" [percentage]="percentage" (changeValue)="this.percentage = $event;"></app-incrementador>
+          </div>
+      </div>
+  </div>
+  <div class="col-6">
+    <div class="card">
+        <div class="card-body">
+          <app-incrementador [labelValue]="'Progress 2'" [percentage]="percentage2" (changeValue)="this.percentage2 = $event;"></app-incrementador>
+        </div>
+    </div>
+  </div>
+</div>
