--- a/src/app/pages/graficas1/graficas1.component.html
+++ b/src/app/pages/graficas1/graficas1.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-12">
+  <div class="col-6">
       <div class="card">
           <div class="card-body">
             
@@ -8,4 +8,31 @@
           </div>
       </div>
   </div>
+  <div class="col-6">
+    <div class="card">
+        <div class="card-body">
+          
+          <app-grafico-dona [chartLabels]="graficos.grafico2.labels" [chartData]="graficos.grafico2.data" [chartType]="graficos.grafico2.type" [leyenda]="graficos.grafico2.leyenda"></app-grafico-dona>
+          
+        </div>
+    </div>
+  </div>
+  <div class="col-6">
+    <div class="card">
+        <div class="card-body">
+          
+          <app-grafico-dona [chartLabels]="graficos.grafico3.labels" [chartData]="graficos.grafico3.data" [chartType]="graficos.grafico3.type" [leyenda]="graficos.grafico3.leyenda"></app-grafico-dona>
+          
+        </div>
+    </div>
+</div>
+<div class="col-6">
+  <div class="card">
+      <div class="card-body">
+        
+        <app-grafico-dona [chartLabels]="graficos.grafico4.labels" [chartData]="graficos.grafico4.data" [chartType]="graficos.grafico4.type" [leyenda]="graficos.grafico4.leyenda"></app-grafico-dona>
+        
+      </div>
+  </div>
+</div>
 </div>
