--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -12,7 +12,7 @@
               src="../assets/images/users/profile.png" alt="user" /><span class="hide-menu">Steave Jobs </span></a>
           <ul aria-expanded="false" class="collapse">
             <li><a routerLinkActive="active" routerLink="/acccount-settings">Account Setting</a></li>
-            <li><a routerLink="/login">Logout</a></li>
+            <li><a (click)="logout()" style="cursor: pointer;">Logout</a></li>
           </ul>
         </li>
         <li class="nav-devider"></li>
