--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -8,9 +8,10 @@
     <nav class="sidebar-nav">
       <ul id="sidebarnav">
         <li class="user-profile">
-          <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><img
-              src="../assets/images/users/profile.png" alt="user" /><span class="hide-menu">Steave Jobs </span></a>
+          <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><img [src]="user.img | image"
+              alt="user" /><span class="hide-menu">{{user.nombre}} </span></a>
           <ul aria-expanded="false" class="collapse">
+            <li><a routerLinkActive="active" routerLink="/profile">My Profile</a></li>
             <li><a routerLinkActive="active" routerLink="/acccount-settings">Account Setting</a></li>
             <li><a (click)="logout()" style="cursor: pointer;">Logout</a></li>
           </ul>
