added upload modal for user images

--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -9,28 +9,30 @@
   <!-- ============================================================== -->
   <div class="page-wrapper">
 
-      <!-- ============================================================== -->
-      <!-- Container fluid  -->
-      <!-- ============================================================== -->
-      <div class="container-fluid">
-          <app-breadcrumbs></app-breadcrumbs>
+    <!-- ============================================================== -->
+    <!-- Container fluid  -->
+    <!-- ============================================================== -->
+    <div class="container-fluid">
+      <app-breadcrumbs></app-breadcrumbs>
 
-          <!-- ============================================================== -->
-          <!-- Start Page Content -->
-          <!-- ============================================================== -->
-          <router-outlet></router-outlet>
-          
-          <!-- ============================================================== -->
-          <!-- End Page Content -->
-          <!-- ============================================================== -->
+      <!-- ============================================================== -->
+      <!-- Start Page Content -->
+      <!-- ============================================================== -->
+      <router-outlet></router-outlet>
 
-      </div>
       <!-- ============================================================== -->
-      <!-- End Container fluid  -->
+      <!-- End Page Content -->
       <!-- ============================================================== -->
+
+    </div>
+    <!-- ============================================================== -->
+    <!-- End Container fluid  -->
+    <!-- ============================================================== -->
 
   </div>
   <!-- ============================================================== -->
   <!-- End Page wrapper  -->
   <!-- ============================================================== -->
 </div>
+
+<app-modal-upload></app-modal-upload>
