--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,25 @@
 .w150 {
   width: 150px;
 }
+
+.w70 {
+  width: 70px;
+}
+
+.img-50 {
+  width: 50px;
+}
+
+.not-show {
+  display: none;
+}
+
+.black-background {
+  background-color: rgba($color: #000000, $alpha: 0.4);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+}
